--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 </body>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>"agro.avif"
+        <h1><agro class="avif"></agro></h1>"agro.avif"
         
     </header>
 </body>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
+        <h1><agro class="agro.avif"></agro></h1>
         <ul>
 
         </ul>
@@ -75,7 +75,7 @@ header {
 <header>
     <img src="" alt="">
     <ul>
-        <li>Escola</li>
+        <li>EscolA</li>
         <li>Estudante</li>
     </ul>
 </header>
