--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ header {
 </head>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
+        <h1><precisao class="png"</precisao></h1>
         <ul>
             <li>Escola</li>
             <li>Estudante</li>
@@ -77,9 +77,9 @@ header {
     <ul>
         <li>EscolA</li>
         <li>Estudante</li>
-    </ul>
+    </u
 </header>
-<img src="alurastart logo.png" alt="">
+<img src="precisao.png" alt="">
 <img src="alurastart logo.png" alt="logo da alura start">
 <header class="cabecalho">
     <img class="cabecalho-imagem" src="alurastart logo.png" alt="agro.avif">
