--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ header {
 <img src="precisao.png" alt="">
 <img src="alurastart logo.png" alt="logo da alura start">
 <header class="cabecalho">
-    <img class="cabecalho-imagem" src="alurastart logo.png" alt="agro.avif">
+    <img class="cabecalho-imagem" src="alurastart logo.png" alt="agrinho">
     <ul class="cabecalho-lista">
         <li class="cabecalho-lista-item">Escola</li>
         <li class="cabecalho-lista-item">Estudante</li>
