--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ header {
 <header class="cabecalho">
     <img class="cabecalho imagem" src="cidade & campo.png" alt="cidade & campo">
     <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">Escola</li>
-        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Agrinho</li>
+        <li class="cabecalho-lista-item">Do campo a cidade colhendo oportunidades</li>
     </ul>
 </header>
 .cabecalho-imagem{
