--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ header {
     </u
 </header>
 <img src="precisao.png" alt="">
-<img src="alurastart logo.png" alt="logo da alura start">
+<img src="campo.png" alt="logo da alura start">
 <header class="cabecalho">
     <img class="cabecalho imagem" src="cidade & campo.png" alt="cidade & campo">
     <ul class="cabecalho-lista">
