--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </body>
 <body>
     <header>
-        <h1><agro class="avif"></agro></h1>"agro.avif"
+        <h1><agro class="avif"></agro></h1>
         
     </header>
 </body>
