--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@ DOCTYPE html>
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">O colegio Estadual Manoel Antonio Gomes (CEMAG), foi fundado
-                no ano de 1960, por Manoel Antonio Gomes, na cidade de Reserva
-                Parana.
-                CEMAG e um colegio conhecido por muitos, o colegio possui times 
-                de futebol que disputam jogos escolares e regionais contra outras
-                escolas.</p>
+            <p class="escola-texto-um"> do campo à cidade, colhendo oportunidades” destaca a importância
+                 da integração entre os diversos setores da economia, tanto no meio rural quanto no urbano,
+             enfatizando a promoção da sustentabilidade e do empreendedorismo neste contexto. Diante disso, a
+                  colaboração entre diferentes atores e a valorização dos recursos naturais surgem como elementos fundamentais para o impulsionar o desenvolvimento econômico e social de maneira sustentável.</p>
 
         </div>
         <img class="escola-imagem" src="foto cemag.jpg" alt="imagem exterior escola">
