--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@ DOCTYPE html>
         <div class="estudante-div">
             <img class="estudante-imagem" src="belle-1.jpg.webp" alt="foto da flavia">
             <h3 class="estudante-nome">flavia</h3>
-            <a href="https://github.com/Flaviahneda"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://instagram.com/vicente_flavia"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
         <div class="estudante-div">
             <img class="estudante-imagem" src="images.jpg" alt="foto da luzia">
             <h3 class="estudante-nome">luzia</h3>
-            <a href="https://github.com/Luzianievola"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.instagram.com/luzianievola"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
         <div class="estudante-div">
             <img class="estudante-imagem" src="images (1).jpg" alt="foto da cibelle">
             <h3 class="estudante-nome">cibelle</h3>
-            <a href="https://github.com/cibelle22"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.instagram.com/cibelle.martins5"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
         <span></span>
@@ -59,8 +59,8 @@ DOCTYPE html>
         <div class="estudante-div">
             <img class="estudante-imagem" src="4de70bcd4dfc1844a1217047fde8d6e7.jpg" alt="foto da juliane">
             <h3 class="estudante-nome">juliane</h3>
-            <a href="https://github.com/juh200815"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.instagram.com/julianevozniak"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
     </div>
