--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@ DOCTYPE html>
         <span></span>
 
         <div class="estudante-div">
-            <img class="estudante-imagem" src="belle-1.jpg.webp" alt="foto da flavia">
+            <img class="foto agro" src="belle-1.jpg.webp" alt="foto do agro">
             <h3 class="estudante-nome">flavia</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
         <div class="estudante-div">
-            <img class="estudante-imagem" src="images.jpg" alt="foto da luzia">
+            <img class="estudante-imagem" src="images.jpg" alt="foto do agro">
             <h3 class="estudante-nome">luzia</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
         <div class="estudante-div">
-            <img class="estudante-imagem" src="images (1).jpg" alt="foto da cibelle">
+            <img class="estudante-imagem" src="images (1).jpg" alt="foto do agro">
             <h3 class="estudante-nome">cibelle</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -57,7 +57,7 @@ DOCTYPE html>
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="4de70bcd4dfc1844a1217047fde8d6e7.jpg" alt="foto da juliane">
+            <img class="estudante-imagem" src="4de70bcd4dfc1844a1217047fde8d6e7.jpg" alt="foto do agro">
             <h3 class="estudante-nome">juliane</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
