--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@ DOCTYPE html>
 
         <div class="estudante-div">
             <img class="foto agro" src="belle-1.jpg.webp" alt="foto do agro">
-            <h3 class="estudante-nome">flavia</h3>
+            <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
         <div class="estudante-div">
             <img class="estudante-imagem" src="images.jpg" alt="foto do agro">
-            <h3 class="estudante-nome">luzia</h3>
+            <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
 
         <div class="estudante-div">
             <img class="estudante-imagem" src="images (1).jpg" alt="foto do agro">
-            <h3 class="estudante-nome">cibelle</h3>
+            <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
@@ -58,7 +58,7 @@ DOCTYPE html>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="4de70bcd4dfc1844a1217047fde8d6e7.jpg" alt="foto do agro">
-            <h3 class="estudante-nome">juliane</h3>
+            <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
