--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ DOCTYPE html>
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="4de70bcd4dfc1844a1217047fde8d6e7.jpg" alt="foto do agro">
+            <img class="estudante-imagem" src="bovino.png" alt="foto do agro">
             <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
