--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ DOCTYPE html>
             <img class="estudante-imagem" src="bovino.png" alt="foto do agro">
             <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Alem de proteger da 
+                inflação, investir em gado e uma oportunidade de divercificar a carteira de investimentos >
         </div>
 
     </div>
