--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ DOCTYPE html>
             <img class="estudante-imagem" src="nelore.png" alt="foto do agro">
             <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="O valor da arroba do boi
+                esta cotado hoje em R$232,35."></a>
         </div>
 
         <span></span>
