--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ DOCTYPE html>
         </div>
 
         <div class="estudante-div">
-            <img class="estudante-imagem" src="images.jpg" alt="foto do agro">
+            <img class="estudante-imagem" src="carne.png" alt="foto do agro">
             <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
