--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ DOCTYPE html>
         <div class="estudante-div">
             <img class="estudante-imagem" src="carne.png" alt="foto do agro">
             <h3 class="estudante-nome">agro</h3>
-            <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Os cargos em um frigorifico
                 são de magarefe, desossador, faqueiro, refilador, lombador, serrador, eviscerador, e atordoador
                 com salarios que variam de R$1.402,62 a R$1.593,00."></a>
