--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ DOCTYPE html>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Alem de proteger da 
                 inflação, investir em gado e uma oportunidade de divercificar a carteira de
-                 investimentos >
+                 investimentos
         
-        <img class="rodape-imagem"src="alura.jpg" alt="">
+
     </footer>
 </body>
 </html>
