--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ DOCTYPE html>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Alem de proteger da 
                 inflação, investir em gado e uma oportunidade de divercificar a carteira de
-                 investimentos
+                 investimentos>
         
 
     </footer>
