--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@ DOCTYPE html>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="bovino.png" alt="foto do agro">
-            <h3 class="estudante-nome">agro</h3>
+            <h3 class="estudante-nome">Alem de proteger da 
+                inflação, investir em gado e uma oportunidade de divercificar a carteira de
+                 investimentos></h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Alem de proteger da 
                 inflação, investir em gado e uma oportunidade de divercificar a carteira de
                  investimentos>
+                 
         
 
     </footer>
