--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ DOCTYPE html>
 
         <div class="estudante-div">
             <img class="estudante-imagem" src="carne.png" alt="foto do agro">
-            <h3 class="estudante-nome">agro</h3>
+            <h3 class="estudante-nome">Os cargos em um frigorifico
+                são de magarefe, desossador, faqueiro, refilador, lombador, serrador, eviscerador, e atordoador
+                com salarios que variam de R$1.402,62 a R$1.593,00.</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Os cargos em um frigorifico
                 são de magarefe, desossador, faqueiro, refilador, lombador, serrador, eviscerador, e atordoador
@@ -51,7 +53,8 @@ DOCTYPE html>
 
         <div class="estudante-div">
             <img class="estudante-imagem" src="nelore.png" alt="foto do agro">
-            <h3 class="estudante-nome">agro</h3>
+            <h3 class="estudante-nome">O valor da arroba do boi
+                esta cotado hoje em R$232,35.</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="O valor da arroba do boi
                 esta cotado hoje em R$232,35."></a>
@@ -63,7 +66,7 @@ DOCTYPE html>
             <img class="estudante-imagem" src="bovino.png" alt="foto do agro">
             <h3 class="estudante-nome">Alem de proteger da 
                 inflação, investir em gado e uma oportunidade de divercificar a carteira de
-                 investimentos></h3>
+                 investimentos</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Alem de proteger da 
                 inflação, investir em gado e uma oportunidade de divercificar a carteira de
