--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@ DOCTYPE html>
                 são de magarefe, desossador, faqueiro, refilador, lombador, serrador, eviscerador, e atordoador
                 com salarios que variam de R$1.402,62 a R$1.593,00.</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
-            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="Os cargos em um frigorifico
-                são de magarefe, desossador, faqueiro, refilador, lombador, serrador, eviscerador, e atordoador
-                com salarios que variam de R$1.402,62 a R$1.593,00."></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt=""></a>
         </div>
 
         <div class="estudante-div">
