--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@ DOCTYPE html>
             <h3 class="estudante-nome">O valor da arroba do boi
                 esta cotado hoje em R$232,35.</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
-            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="O valor da arroba do boi
-                esta cotado hoje em R$232,35."></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt=""></a>
         </div>
 
         <span></span>
