--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ DOCTYPE html>
         <span></span>
 
         <div class="estudante-div">
-            <img class="foto agro" src="belle-1.jpg.webp" alt="foto do agro">
+            <img class="foto agro" src="mercado.jpg" alt="foto do agro">
             <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
