--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ DOCTYPE html>
         <span></span>
 
         <div class="estudante-div">
-            <img class="foto agro" src="" alt="mercado">
+            <img class="foto agro" src="" alt="mercado.jpg">
             <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
