--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@ DOCTYPE html>
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um"> do campo à cidade, colhendo oportunidades” destaca a importância
-                 da integração entre os diversos setores da economia, tanto no meio rural quanto no urbano,
-             enfatizando a promoção da sustentabilidade e do empreendedorismo neste contexto. Diante disso, a
-                  colaboração entre diferentes atores e a valorização dos recursos naturais surgem como elementos fundamentais para o impulsionar o desenvolvimento econômico e social de maneira sustentável.</p>
+            <p class="escola-texto-um">A carne bovina é uma das principais fontes de proteina 
+                em muitas dietas ao redor do mundo. A produção de carne bovina envolve a criãção 
+                de gado,
+            </p>
 
         </div>
         <img class="escola-imagem" src="foto cemag.jpg" alt="imagem exterior escola">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <h2 class="estudante-titulo">Oportunidades de trabalho com o gado</h2>
         <div class="estudante-todos">
         <span></span>
 
