--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ DOCTYPE html>
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">A carne bovina é uma das principais fontes de proteina 
                 em muitas dietas ao redor do mundo. A produção de carne bovina envolve a criãção 
-                de gado,
+                de gado, que podem oferecer diversas oportunidades tanto para as áreas rurais quanto
+                para as urbanas.
             </p>
 
         </div>
