--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ DOCTYPE html>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <h2 class="escola-titulo">Sobre o gado</h2>
             <p class="escola-texto-um">A carne bovina é uma das principais fontes de proteina 
                 em muitas dietas ao redor do mundo. A produção de carne bovina envolve a criãção 
                 de gado, que podem oferecer diversas oportunidades tanto para as áreas rurais quanto
