--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ DOCTYPE html>
             </p>
 
         </div>
-        <img class="escola-imagem" src="foto cemag.jpg" alt="imagem exter">
+        <img class="escola-imagem" src="tema.jpg" alt="">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Oportunidades de trabalho com o gado</h2>
