--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ DOCTYPE html>
         <span></span>
 
         <div class="estudante-div">
-            <img class="foto agro" src="" alt="mercado.jpg">
+            <img class="foto agro" src="churasco.png" alt="mercado.jpg">
             <h3 class="estudante-nome">agro</h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
-            <a href="texto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="texto"><img class="estudante-icone" src="instagram.png" alt=""></a>
         </div>
 
         <div class="estudante-div">
