--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ DOCTYPE html>
         <span></span>
 
         <div class="estudante-div">
-            <img class="foto agro" src="" alt="mercado.jpg">
-            <h3 class="estudante-nome">agro</h3>
+            <img class="foto agro" src="" alt="">
+            <h3 class="estudante-nome"></h3>
             <a href="texto"><img class="estudante-icone" src="github.png" alt=""></a>
             <a href="texto"><img class="estudante-icone" src="instagram.png" alt=""></a>
         </div>
