--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ DOCTYPE html>
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alura.jpg"logo cemag">
+        <img class="cabecalho-imagem" src="field-3379250_640.jpg"logo cemag">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">cemag</li>
         </ul>
