--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ DOCTYPE html>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="field-3379250_640.jpg"logo cemag">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">cemag</li>
+            <li class="cabecalho-lista-item">AGRINHO</li>
         </ul>
     </header>
     <section class="escola">
